@@ -6,7 +6,7 @@ use Data::Login;
 use DateTime;
 use English;
 use Error::Pure::Utils qw(clean);
-use Test::More 'tests' => 7;
+use Test::More 'tests' => 8;
 use Test::NoWarnings;
 
 # Test.
@@ -137,4 +137,33 @@ eval {
 };
 is($EVAL_ERROR, "Parameter 'valid_from' is required.\n",
 	"Parameter 'valid_from' is required.");
+clean();
+
+# Test.
+eval {
+	Data::Login->new(
+		'hash_type' => Data::HashType->new(
+			'name' => 'sha256',
+			'valid_from' => DateTime->new(
+				'day' => 1,
+				'month' => 1,
+				'year' => 2024,
+			),
+		),
+		'login_name' => 'skim',
+		'password_hash' => 'aec070645fe53ee3b3763059376134f058cc337247c978add178b6ccdfb0019f',
+		'valid_from' => DateTime->new(
+			'day' => 1,
+			'month' => 1,
+			'year' => 2024,
+		),
+		'valid_to' => DateTime->new(
+			'day' => 1,
+			'month' => 1,
+			'year' => 2023,
+		),
+	);
+};
+is($EVAL_ERROR, "Parameter 'valid_to' must be older than 'valid_from' parameter.\n",
+	"Parameter 'valid_to' must be older than 'valid_from' parameter.");
 clean();
